fix(layout): layout overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,11 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(/background.png) no-repeat;
+  background-image: url('/background.png');
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
 .gradient_background {
